2013-06-05 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions.php: cleaned source code style.
	
	* include/get_file.php: fixed the include the auth.
	
	Fixes: #2274

2013-06-05 Miguel de Dios <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php: fixed the pagination.
	
	Fixes: #2255
	
	* godmode/groups/group_list.php, godmode/agentes/agent_manager.php:
	cleaned source code style.

2013-06-04 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php, godmode/menu.php,
	godmode/alerts/configure_alert_template.php,
	godmode/alerts/configure_alert_action.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/alert_actions.php, godmode/groups/group_list.php,
	godmode/groups/configure_group.php, include/functions.php,
	include/functions_profile.php: fixed the ACLs.
	
	Fixes: #2256

2013-06-04 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/massive/massive_delete_alerts.php: fixed the delete
	alerts with same module.
	
	Fixes: #2272
	
	* include/functions_agents.php: erased unused function.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-06-04  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_groups.php
	operation/agentes/group_view.php: Delete status column
	and group image from groups view. Another visual fixes
	were done

2013-06-03  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_groups.php
	operation/events/events_list.php
	operation/agentes/group_view.php
	mobile/operation/agent.php
	mobile/operation/agents.php
	mobile/include/style/main.css
	general/logon_ok.php: Few visual fixes

2013-06-03  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	index.php: Fix footer layout merged from 4.1

2013-05-31 Miguel de Dios <miguel.dedios@artica.es>

	* mobile/include/style/main.css: fixed the list of modules in the
	main agent view.
	
	* mobile/operation/agent.php: improved the source code style.
	